--- a/styles/style.css
+++ b/styles/style.css
@@ -39,11 +39,10 @@ header nav ul li a {
 main {
   display: flex;
   flex-wrap: wrap;
-  height: 130vh;
 }
 main section.left {
   flex: 3 1 500px;
-  padding: 0 2rem;
+  padding: 2rem;
 }
 main section.left h1 {
   font-size: 4rem;
@@ -51,19 +50,18 @@ main section.left h1 {
 }
 main section.left p {
   font-size: 1.5rem;
-  padding: 1rem 0;
+  padding: 1rem 0rem;
 }
 main section.right {
   flex: 1 1 600px;
   position: relative;
-  margin: 1rem;
 }
 main section.right img {
   border-radius: 50%;
   width: 20vw;
   height: 20vw;
   position: absolute;
-  top: 40vh;
+  top: 55vh;
   right: 25vw;
   transform: translateY(-50%);
 }
@@ -98,12 +96,12 @@ main section.Pic img:hover {
 }
 main section.Pic div.orangeRect {
   width: 30vw;
-  height: 35vw;
+  height: 90vh;
   background-color: #e08958;
   position: absolute;
   top: 40px;
   left: 100px;
-  z-index: -1;
+  z-index: -2;
 }
 main section.form {
   flex: 1 1 600px;
@@ -164,11 +162,7 @@ main section.contact div.content h2 {
 }
 
 footer a {
-  padding: 0 1rem;
-}
-footer a img {
-  height: 75px;
-  width: 75px;
+  padding: 1rem;
 }
 
 @media screen and (max-width: 1100px) {
