--- a/styles/style.scss
+++ b/styles/style.scss
@@ -37,30 +37,28 @@ header {
 main {
   display: flex;
   flex-wrap: wrap;
-  height: 130vh;
 
   section.left {
     flex: 3 1 500px;
-    padding: 0 2rem;
+    padding: 2rem;
     h1 {
       font-size: 4rem;
       color: #e08958;
     }
     p {
       font-size: 1.5rem;
-      padding: 1rem 0;
+      padding: 1rem 0rem;
     }
   }
   section.right {
     flex: 1 1 600px;
     position: relative;
-    margin: 1rem;
     img {
       border-radius: 50%;
       width: 20vw;
       height: 20vw;
       position: absolute;
-      top: 40vh;
+      top: 55vh;
       right: 25vw;
       transform: translateY(-50%);
     }
@@ -96,12 +94,12 @@ main {
 
     div.orangeRect {
       width: 30vw;
-      height: 35vw;
+      height: 90vh;
       background-color: #e08958;
       position: absolute;
       top: 40px;
       left: 100px;
-      z-index: -1;
+      z-index: -2;
     }
   }
   section.form {
@@ -167,11 +165,7 @@ main {
 
 footer {
   a {
-    padding: 0 1rem;
-    img {
-      height: 75px;
-      width: 75px;
-    }
+    padding: 1rem;
   }
 }
 
