--- a/styles/style.css
+++ b/styles/style.css
@@ -174,8 +174,14 @@ footer a {
     width: 100%;
   }
   header nav ul li {
-    padding: 1rem 0;
+    padding: 1rem 0rem;
     border-bottom: 1px solid gray;
+  }
+  main section.left h1 {
+    text-align: center;
+  }
+  main section.left p {
+    font-size: 1rem;
   }
   main section.right {
     display: flex;
@@ -185,8 +191,8 @@ footer a {
   main section.right img {
     position: static;
     transform: none;
-    width: 50vw;
-    height: 50vw;
+    width: 40vw;
+    height: 40vw;
   }
   main section.Pic {
     display: flex;
@@ -202,5 +208,9 @@ footer a {
   }
   main section.form form div label {
     font-size: 1.25rem;
+  }
+  main footer img {
+    width: 10vw;
+    height: 0vw;
   }
 }/*# sourceMappingURL=style.css.map */
