--- a/styles/style.scss
+++ b/styles/style.scss
@@ -180,13 +180,21 @@ footer {
         width: 100%;
 
         li {
-          padding: 1rem 0;
+          padding: 1rem 0rem;
           border-bottom: 1px solid gray;
         }
       }
     }
   }
   main {
+    section.left{
+      h1{
+        text-align: center;
+      }
+      p{
+        font-size: 1rem; 
+      }
+    }
     section.right {
       display: flex;
       justify-content: center;
@@ -194,8 +202,8 @@ footer {
       img {
         position: static;
         transform: none;
-        width: 50vw;
-        height: 50vw;
+        width: 40vw;
+        height: 40vw;
       }
     }
     section.Pic {
@@ -218,6 +226,12 @@ footer {
             font-size: 1.25rem;
           }
         }
+      }
+    }
+    footer{
+      img{
+        width: 10vw;
+        height: 0vw;
       }
     }
   }
