--- a/sideProject/hawaii/styles/style.css
+++ b/sideProject/hawaii/styles/style.css
@@ -34,7 +34,7 @@ header {
 header div.logo {
   /*劃區塊*/
   flex: 5 1 400px;
-  margin-left: 2REM;
+  margin-left: 2rem;
   /*將區塊內呈橫向*/
   display: flex;
   /*字移至水平線*/
