--- a/sideProject/hawaii/styles/style.scss
+++ b/sideProject/hawaii/styles/style.scss
@@ -31,7 +31,7 @@ header {
   div.logo {
     /*劃區塊*/
     flex: 5 1 400px;
-    margin-left: 2REM;
+    margin-left: 2rem;
     /*將區塊內呈橫向*/
     display: flex;
     img {
