--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,6 +35,7 @@ header {
   }
 }
 main {
+  height: 100vh;
   display: flex;
   flex-wrap: wrap;
 
@@ -48,6 +49,13 @@ main {
     p {
       font-size: 1.5rem;
       padding: 1rem 0rem;
+    }
+    p::before {
+      content: ">>";
+      color: #e08958;
+      animation-name: arrow;
+      transition-duration: 1s;
+      animation-iteration-count: infinite;
     }
   }
   section.right {
@@ -75,7 +83,7 @@ main {
         }
         &:hover {
           background-color: #f4cfac;
-          transition: all 0.15s ease;
+          transition: all 0.2s ease;
         }
       }
     }
@@ -187,12 +195,12 @@ footer {
     }
   }
   main {
-    section.left{
-      h1{
+    section.left {
+      h1 {
         text-align: center;
       }
-      p{
-        font-size: 1rem; 
+      p {
+        font-size: 1rem;
       }
     }
     section.right {
@@ -228,11 +236,13 @@ footer {
         }
       }
     }
-    footer{
-      img{
-        width: 10vw;
-        height: 0vw;
-      }
-    }
+  }
+}
+@keyframes arrow {
+  from {
+    color: #fa5f06;
+  }
+  to {
+    color: #ffaa79;
   }
 }
